remctl (3.8-2) UNRELEASED; urgency=medium

  * Add upstream patch to increase the buffer size on timeout tests.
    Linux has apparently increased the size of network writes it is
    willing to buffer internally, so we now have to write more data to
    force a timeout.  (Closes: #743991)

 -- Russ Allbery <rra@debian.org>  Tue, 08 Apr 2014 18:49:33 -0700

remctl (3.8-1) unstable; urgency=medium

  * New upstream release.
    - remctld now uses libevent for the process event loop, which removes
      the need to poll for child exit and will make the server faster and
      more responsive.
    - Fill each MESSAGE_OUTPUT message from the server with the maximum
      allowed data per the protocol, rather than capping it artificially
      at 65000 octets.
    - Fix a minor server memory leak when processing help commands.
    - Fix a minor client memory leak on errors with protocol one commands.
    - Write out the server PID file atomically.
  * Start building the Ruby extension for Ruby 2.0 and stop building it
    for Ruby 1.8, which is being removed.  (Closes: #735659)
  * Add Depends on ruby | ruby-interpreter to ruby-remctl.  This is
    apparently standard for Ruby extensions, since it will pull in a
    version of Ruby that can use the extension if the Ruby versions of the
    extension match the providers of ruby-interpreter.
  * Drop Replaces and Breaks on libremctl-ruby1.8 and libremctl-ruby1.9.
    These were already tranditional packages in wheezy.
  * Correctly qualify the libsystemd-daemon-dev dependency with
    [linux-any].  (Closes: #736578)
  * Switch to the new uscan upstream signature verification method, which
    uses an armored key in debian/upstream/signing-key.asc.  This allows
    removal of debian/source/include-binaries.  Export a minimal key to
    save all the space required by key signatures, since inclusion of the
    key in the package already indicates the relevant trust and the