@@ -1,2 +1,0 @@
-usr/lib/ruby/vendor_ruby
-usr/lib/*/ruby/vendor_ruby
