@@ -18,7 +18,7 @@ export REMCTL_PYTHON_INSTALL  := --install-layout=deb
 export REMCTL_PYTHON_VERSIONS := $(shell pyversions -s)
 
 %:
-	dh $@ --parallel --with python2,autoreconf
+	dh $@ --parallel --with python2,autoreconf,ruby
 
 override_dh_autoreconf:
 	dh_autoreconf --as-needed
@@ -28,23 +28,6 @@ override_dh_auto_configure:
 	    --with-systemdsystemunitdir=/lib/systemd/system		\
 	    --enable-reduced-depends --enable-perl --enable-php		\
 	    --enable-python --enable-ruby
-
-# For the first pass, build the Ruby 1.9.1 extension.  We'll go back and
-# build the extension for 2.0.
-override_dh_auto_build:
-	dh_auto_build --parallel -- REMCTL_RUBY=ruby1.9.1
-
-override_dh_auto_test:
-	dh_auto_test --parallel -- REMCTL_RUBY=ruby1.9.1
-
-# After installing the build for the default version of Ruby, go back and
-# rebuild for the newer version.
-override_dh_auto_install:
-	dh_auto_install -- RUBYARCHDIR='$$(vendorarchdir)$$(target_prefix)'
-	cd ruby && $(MAKE) distclean
-	dh_auto_build --parallel -- REMCTL_RUBY=ruby2.0
-	cd ruby && $(MAKE) install DESTDIR='$(CURDIR)/debian/tmp' \
-	    RUBYARCHDIR='$$(DESTDIR)$$(vendorarchdir)$$(target_prefix)'
 
 # Override install to check for missing installed files.
 override_dh_install:
